# mlops-rohem-pipelines

./: README.md  pyproject.toml  requirements.txt
ci/: cloudbuild.yaml
pipelines/: register_model.py  train_model.py  validate_model.py
scripts/: compile_pipeline.py
src/mlops-pipelines/components/: evaluate.py  train.py
src/mlops-pipelines/contracts/: __init__.py
src/mlops-pipelines/pipelines/: __init__.py  batch_prediction.py  retraining.py
src/mlops-pipelines/utils/: __init__.py  labels.py
src/mlops_pipelines/components/: __init__.py  deploy.py  evaluate.py  register.py  train.py
src/mlops_pipelines/contracts/: model_contract.py
src/mlops_pipelines/pipelines/: __init__.py  training.py
tests/: test_imports.py
